@startuml

class PrintTask {
}
class Main {
}
class PrinterManager {
}
class Print {
}
class Printer {
}
class StandardFDM {
}
enum FilamentType {
}

'Relationships with actions
PrintTask "1" <-- "1" Main : manages
PrintTask "1" o-- "1" PrinterManager : schedules tasks for
Print "1" --> "1" Printer : uses
Print "1" <-- "1" PrintTask : generated by
Print "*" <-- "1" Main : creates
Print "*" o-- "1" PrinterManager : manages print queue for
Print "*" <-- "1" StandardFDM : processed by
Spool "*" o-- "1" PrinterManager : loaded into
Spool "3" <-- "1" MultiColor : required by
Spool "1" <-- "1" StandardFDM : uses
Spool "*" <-- "1" Main : accessed by
Spool "*" <-- "1" Printer : controlled by
Printer "1" <|-- "1" StandardFDM : is a type of
StandardFDM "1" <|-- "1" HousedPrinter : specialized as
StandardFDM "1" <|-- "1" MultiColor : specialized as
FilamentType <-- Main : selected by
FilamentType <-- PrintTask : specified in
FilamentType <-- Spool : supports
FilamentType <-- PrinterManager : managed by
HousedPrinter o-- PrinterManager : monitored by
MultiColor o-- PrinterManager : managed by
Printer o-- PrinterManager : registered with
StandardFDM o-- PrinterManager : controlled by
PrinterManager "1" <-- "1" Main : initiated by
@enduml
